--- a/index.html
+++ b/index.html
@@ -113,7 +113,70 @@
                 </div>
             </div>
             <div class="clearfix"></div>
+                <br><br>
+                <div class="col-div-8">
+                    <div class="box-8">
+                        <div class="content-box">
+                            <p>Top Selling Projects
+                                <span>Sell All</span>
+                            </p>
+                            <table>
+                                <tr>
+                                    <th>Company</th>
+                                    <th>Contact</th>
+                                    <th>Country</th>
+                                </tr>
+                                <tr>
+                                    <td>Pepsi</td>
+                                    <td>Cristian Soto</td>
+                                    <td>Perú</td>
+                                </tr>
+                                <tr>
+                                    <td>Bonafont</td>
+                                    <td>Omar Rodriguez</td>
+                                    <td>Tlaxcala</td>
+                                </tr>
+                                <tr>
+                                    <td>Coca Cola</td>
+                                    <td>Gustabo Berman</td>
+                                    <td>México</td>
+                                </tr>
+                                <tr>
+                                    <td>Barcel</td>
+                                    <td>Jose Shrek</td>
+                                    <td>México</td>
+                                </tr>
+                                <tr>
+                                    <td>Intramites</td>
+                                    <td>Lalin Vazquez</td>
+                                    <td>Argentina</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-div-4">
+                    <div class="box-4">
+                        <div class="content-box">
+                            <p>Total Sale
+                                <span>Sell All</span>
+                            </p>
+                            <div class="circle-wrap">
+                                <div class="circle">
+                                    <div class="mask full">
+                                        <div class="fill"></div>
+                                    </div>
+                                    <div class="mask half">
+                                        <div class="fill"></div>
+                                    </div>
+                                    <div class="inside-circle">75%</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
+        <div class="clearfix"></div>
     </div>
 
 
